--- a/public/html/admin/admin.html
+++ b/public/html/admin/admin.html
@@ -16,7 +16,7 @@
         <input id='manage-list-member' type="radio" name="manage-list">
         <ul>
           <li>
-              <button class="manage-list-button member-button select" onClick='getMemberList(1, 10)'>회원 목록</button>
+              <button class="manage-list-button member-button select" onClick="getDataList('member', 1, 10)">회원 목록</button>
           </li>
           <li>
               <button class="manage-list-button member-button insert">회원 등록</button>
@@ -36,7 +36,7 @@
         <input id='manage-list-questions' type="radio" name="manage-list">
         <ul>
           <li>
-              <button class="manage-list-button questions-button select" onClick='getMemberList(1, 10)'>문제 목록</button>
+              <button class="manage-list-button questions-button select" onClick="getDataList('questions', 1, 10)">문제 목록</button>
           </li>
           <li>
               <button class="manage-list-button questions-button insert">문제 등록</button>
@@ -56,7 +56,7 @@
         <input id='manage-list-notice' type="radio" name="manage-list">
         <ul>
           <li>
-              <button class="manage-list-button notice-button select" onClick='getMemberList(1, 10)'>공지 목록</button>
+              <button class="manage-list-button notice-button select" onClick="getDataList('notice', 1, 10)">공지 목록</button>
           </li>
           <li>
               <button class="manage-list-button notice-button insert">공지 등록</button>
@@ -76,7 +76,7 @@
         <input id='manage-list-report' type="radio" name="manage-list">
         <ul>
           <li>
-              <button class="manage-list-button report-button select" onClick='getMemberList(1, 10)'>신고 목록</button>
+              <button class="manage-list-button report-button select" onClick="getDataList('report', 1, 10)">신고 목록</button>
           </li>
           <li>
               <button class="manage-list-button report-button insert">신고 등록</button>
